tests/parsing/fail/missing_version_in_pragma.circom
pragma circom;

template T() {
}

component main = T();
